--- a/style.css
+++ b/style.css
@@ -6,16 +6,48 @@
 }
 
 body {
+    background-color: pink;
     font-family: Montserrat;
     margin: 0;
     display: flex;
     flex-direction: column;
-        /* aligns all elements on the page vertically */
     align-items: center;
-        /* centers the column in the middle of page */
     justify-content:center;
     height: 100vh;
     overflow:hidden;
-        /* hides scroll bars */
 }
 
+h3 {
+    color: white;
+    margin: 10px 0 20px;
+    text-align: center;
+}
+
+.container {
+    width: 500px;
+}
+
+textarea {
+    border: none;
+    display: block;
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    font: inherit;
+    margin: 0 0 20px;
+    font-size: 16px
+}
+
+.tag {
+    background-color: lightskyblue;
+    color: white;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 0 5px 10px 0;
+    font-size: 14px;
+    display: inline-block;
+}
+
+.tag.highlight {
+    background-color: rgb(225, 118, 136);
+}
