--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
     overflow:hidden;
 }
 
+h1 {
+    color: white;
+    margin: 10px 0 20px;
+    text-align: center;
+}
+
 h3 {
     color: white;
     margin: 10px 0 20px;
